created html file with jumbotron

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-const inquirer = require('inquirer');
-const fs = require('fs');
-
-
-`<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,23 +11,17 @@ const fs = require('fs');
 
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Hi! My name is ${userName}</h1>
-        <p class="lead">I live in ${userLocation} </p>
-        <p class="lead">I love to ${userHobby}</p>
-        <p class="lead">If you want to connect, here is my Linkedin profile ${userLinkedIn}</p>
+        <h1 class="display-4">Hi! My name is </h1>
+        <p class="lead">I live in </p>
+        <p class="lead">I love to </p>
+        <p class="lead">If you want to connect, here is my Linkedin profile </p>
 
         <hr class="my-4">
         <p>Checkout my project below!</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Github projects ${userGithub}</a>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Github projects </a>
         </p>
     </div>
 </body>
 
-</html>`
-
-
-inquirer.prompt({
-
-
-})
+</html>
